# jpnkanji

./: .gitattributes  .htaccess  4jwords  Makefile  README.html  README.md  attrlist.php  aviation  bushu.php  cache.php  classical  compdic  component.php  concrete  concrete.doc  configure  configure.in  criter.php  deconjfun.php  depfun.mak  docmaker.php  edict_license.html  engscidic  findic  fourcorner.php  gzcompress.php  headerfun.php  headers.php  j_places  japcharset.php  japkanji.css  japkanji.php.in  japkanjilist.php  japverb.php  japverb3.php  jislist.php  jouyou.php  kanjidic  kanjikonverto.php.in  kanjisearch.php  (+25 more)
searchmodules/: customize.php  kanjiinput.php  skip.php
